[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Characters/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Characters/EnemyStates.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/Fonts/ThemeFontPixel.tres" type="DynamicFont" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 hit_color : hint_color = vec4(1.0, 1.0, 1.0, 1.0);
uniform float hit_strength : hint_range(0.0,1.0) = 0.0;

void fragment() {
	vec4 custom_color = texture(TEXTURE, UV);
	custom_color.rgb = mix(custom_color.rgb, hit_color.rgb, hit_strength);
	COLOR = custom_color;
}"

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/hit_color = Color( 1.3, 1.3, 1.3, 1 )
shader_param/hit_strength = 0.0

[sub_resource type="SpriteFrames" id=6]
resource_local_to_scene = true
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "chase",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "knockback",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="CircleShape2D" id=3]
radius = 400.0

[sub_resource type="RectangleShape2D" id=4]

[node name="Enemy" type="KinematicBody2D" groups=["enemy", "hittable", "resettable"]]
collision_layer = 4
script = ExtResource( 1 )

[node name="EnemyStates" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Flip" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Flip"]
material = SubResource( 5 )
frames = SubResource( 6 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Vision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
shape = SubResource( 3 )
disabled = true

[node name="VisionCast" type="RayCast2D" parent="."]
collision_mask = 0

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 4 )

[node name="HitFlashTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="StateLabel" type="Label" parent="."]
visible = false
margin_left = -20.0
margin_top = -72.0
margin_right = 20.0
margin_bottom = -58.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 5 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="body_entered" from="Vision" to="." method="_on_Vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_Vision_body_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
